# rules_python_experiments

./: .bazelrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  WORKSPACE  internal_deps.bzl
.github/workflows/: ci.yaml  release.yml  workspace_snippet.sh
docs/: BUILD.bazel
interpreter/: Dockerfile.cpython36
interpreter/overrides/Modules/: Setup.local
interpreter/patches/: no_user_site_directory.patch
python/: BUILD.bazel  repositories.bzl  toolchain.bzl
python/private/: BUILD.bazel  entry.py.tmpl  entry.tmpl.sh  providers.bzl  py_interpreter.bzl  py_library.bzl  py_runtimes.bzl  py_version.bzl  python.bzl  toolchain.bzl  toolchains_repo.bzl  utils.bzl  versions.bzl
python/tests/: BUILD.bazel  __main__.py  python_version_test.py  requirements.txt  versions_test.bzl
python/tests/libgreet/: BUILD.bazel  greeter.py  utils.py
