load("//python/private:python.bzl", "py_test")
load(":versions_test.bzl", "versions_test_suite")

versions_test_suite(name = "versions_test")

py_test(
    name = "python_version_test",
    srcs = ["python_version_test.py"],
    env = {
        "PYTHON_VERSION": "3.9.7"
    }
)

py_test(
    name = "python_version_test_non_default",
    srcs = ["python_version_test.py"],
    env = {
        "PYTHON_VERSION": "3.10.0"
    },
    python_version = "@aspect_rules_python_experiments//python/private:v3.10",
)
